--- a/src/components/welcome-screen/WelcomeScreen.scss
+++ b/src/components/welcome-screen/WelcomeScreen.scss
@@ -1,6 +1,6 @@
 .excalidraw {
-  .virgil {
-    font-family: "Virgil";
+  .HandWritingFont {
+    font-family: "HandWritingFont";
   }
 
   // WelcomeSreen common
